<resources>
    <string name="app_name">TopCelebritiesListView</string>
    <string name="tvNoItems">No items found</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>